--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body::before {
   inset: 0;
   z-index: -1;
   opacity: 0.05;
-  background: url("./logo.svg");
+  background: url("assets/nogizaka46_logo.svg") repeat;
   background-size: 256px;
   transform: rotate(-12deg) scale(1.35);
   animation: slide 30s linear infinite;
@@ -28,21 +28,14 @@ body::before {
   from {
     background-position: 0 0;
   }
+
   to {
     background-position: 256px 224px;
   }
 }
 
-@keyframes spin {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 @media (prefers-reduced-motion) {
+
   *,
   ::before,
   ::after {
